# CaptureViewer

./: .gitignore  README.md  install-deps.sh  pyproject.toml  run.sh
build-aux/appimage/: build-appimage.sh
build-aux/flatpak/: build-flatpak.sh  io.github.chamithshehan.CaptureViewer.yaml  io.github.cswtech.CaptureViewer.yaml
captureviewer/: __init__.py  __main__.py  application.py  config.py  devices.py  gamepad.py  pipeline.py  settings_dialog.py  window.py
data/: io.github.chamithshehan.CaptureViewer.desktop  io.github.chamithshehan.CaptureViewer.metainfo.xml  io.github.cswtech.CaptureViewer.desktop  io.github.cswtech.CaptureViewer.metainfo.xml
